--- a/registration.html
+++ b/registration.html
@@ -31,7 +31,7 @@
         </select>
 
         <button style="width: 100%; background-color: #007bff; color: white; border: none; padding: 10px; border-radius: 5px; cursor: pointer;">
-            Register
+            submit
         </button>
     </div>
 
